fixing ul spacing

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -56,10 +56,19 @@ body {
     position: relative;
     width: 100vw;
     top: 50%;
+    display: block;
+    text-align: justify;
+}
+
+ul {
+    display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 li {
     list-style: square;
+    display: inline-block;
 }
 
 @keyframes cursor-blink {
